[metadata]
name = console_imports


[global]
verbose = 0

[egg_info]
egg_base = /tmp

[options]
install_requires =
    aiohttp
    behave
    bs4
    build
    darling
    ghapi
    icecream
    ipython
    packaging
    path
    pypi-cleanup
    pytest
    pytest-asyncio
    pywatchman
    rich
    semver
    typer[all]
    wheel
